chore: changing the template language to English

--- a/src/common/templates/forget.pug
+++ b/src/common/templates/forget.pug
@@ -1,1 +1,1 @@
-p Você solicitou a recuperação de senha, por favor use o token #{token}
+p You have requested a password reset. Please use the following token: #{token}
