--- a/src/common/templates/verify-email.pug
+++ b/src/common/templates/verify-email.pug
@@ -1,3 +1,3 @@
-p Olá #{name},
-p Por favor, clique no link abaixo para verificar seu e-mail:
-a(href=verificationUrl) Verificar meu e-mail
+p Hello #{name},
+p Please click the link below to verify your email:
+a(href=verificationUrl) Verify my email
